--- a/README.org
+++ b/README.org
@@ -1,3 +1,16 @@
+#+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
+#+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
+#+HTML_DOCTYPE: xhtml-strict
+#+HTML_CONTAINER: div
+#+HTML_LINK_HOME: https://github.com/dieter-wilhelm/ansys-mode
+#+HTML_LINK_UP: index.html
+#+HTML_HEAD:
+#+HTML_HEAD_EXTRA:
+#+HTML_MATHJAX:
+#+INFOJS_OPT:
+#+CREATOR: <a href="http://www.gnu.org/software/emacs/">Emacs</a> 24.5.1 (<a href="http://orgmode.org">Org</a> mode 8.2.10)
+#+LATEX_HEADER:
+
 This is the text of ANSYS-Mode's README.org, it is best read in
 Emacs's Org mode.
 
@@ -202,7 +215,7 @@ remove the compiled .elc files, if any.)
 - README.org -- This file
 - NEWS.org -- News and history
 - TODO.org -- Todos and deficiencies
-- LICENSE -- The GPL (Gnu Public License) Version 3
+- LICENSE.org -- The GPL (Gnu Public License) Version 3
 - default.el -- Configuration (example) file
 - helper/example.dat -- WorkBench example APDL solver input file
 - helper/example.anf -- ANSYS geometry neutral file example
