--- a/doc/default.org
+++ b/doc/default.org
@@ -14,8 +14,8 @@
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
 #+HTML_DOCTYPE: xhtml-strict
 #+HTML_CONTAINER: div
-#+HTML_LINK_HOME:
-#+HTML_LINK_UP:
+#+HTML_LINK_HOME: https://github.com/dieter-wilhelm/ansys-mode
+#+HTML_LINK_UP: ../index.html
 #+HTML_HEAD:
 #+HTML_HEAD_EXTRA:
 #+HTML_MATHJAX:
@@ -30,11 +30,10 @@ Customisations for GNU-Linux and Windows systems.
 
 All the following code examples you will find in the file
 /default.el/, which can be used as the configuration file for
-ANSYS-Mode (after moving it e. g. to
-/\/usr\/share\/emacs\/site-lisp\// or
-/c:\\EMACSINSTALLDIR\\site-lisp\\/).  Yet this file is loaded *after*
-Emacs' user configuration file /~\/.emacs/ (or /~\/.emacs.el/ or
-/~\/.emacs.d\/init.el/, if any)!  When you intend to change any of the
+ANSYS-Mode (after moving it e. g. to [[/usr/share/emacs/site-lisp]] or
+[[c:\\EMACSINSTALLDIR\\site-lisp\\]]).  Yet this file is loaded *after*
+Emacs' user configuration file [[~/.emacs]] (or [[~/.emacs.el]] or
+[[~/.emacs.d/init.el]], if any)!  When you intend to change any of the
 following settings either with
 
 1) Emacs' customisation system or
@@ -187,7 +186,7 @@ function (without the suffix /.mac/).
 
 With the setting
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp
   (add-to-list 'auto-mode-alist '("\\.mac$" . ansys-mode))
 #+END_SRC
 
@@ -235,7 +234,7 @@ imports, see the file /example.anf/.
   With the following code block Emacs inserts automatically an outline
   of a code structure when creating a macro file (a file with the
   suffix /.mac/).
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp
 (auto-insert-mode 1)	        ; insert automatically templates
 (add-hook 'find-file-hook 'auto-insert) ; when opening new files
 (setq auto-insert-query t)   ; aks for auto insertion of APDL template
@@ -254,7 +253,7 @@ imports, see the file /example.anf/.
 (setq auto-insert-query t)   ; aks for auto insertion of APDL template
 (add-to-list 'auto-insert-alist
   '(ansys-mode . [ansys-skeleton-outline-template])) ;which template to insert
-#+END_SRC										   ;template
+#+END_SRC
 
 * Autoloading
   Below set of useful commands can be interactively called (with M-x
@@ -272,7 +271,7 @@ imports, see the file /example.anf/.
 (autoload 'ansys-mode-version "ansys-mode" "Show ANSYS-Mode's version number." 'interactive)
   #+END_SRC
 
-#+BEGIN_SRC emacs-lisp :tangle yes :exports none
+#+BEGIN_SRC emacs-lisp :exports none  :tangle yes
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 			    ;; Autoloading
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -289,13 +288,14 @@ calling a special ANSYS customisation buffer." 'interactive)
 (autoload 'ansys-start-ansys "ansys-mode" "Activate the function for starting the APDL interpreter under GNU-Linux or product launcher under Windows." 'interactive)
 (autoload 'ansys-license-status "ansys-mode" "Activate the function for displaying ANSYS license status or starting a license utility." 'interactive)
 (autoload 'ansys-mode-version "ansys-mode" "Show ANSYS-Mode's version number." 'interactive)
+
 #+END_SRC
 
 * Outlining
   Activating outline minor mode for selectively hiding and unhiding
   code sections:
 
-#+BEGIN_SRC 
+#+BEGIN_SRC emacs-lisp
 (add-hook 'ansys-mode-hook 'ansys-outline-minor-mode) ;enable outlining
 #+END_SRC  
 
@@ -321,7 +321,7 @@ files (but only when ansys-highlighting-level is set to 2, see
 below).
 #+BEGIN_SRC emacs-lisp
 (setq ansys-dynamic-highlighting-flag nil)
-(setq ansys-dynamic-highlighting-flag t) ;default
+(setq ansys-dynamic-highlighting-flag t) ;default: t
 
 #+END_SRC
 ** Decoration levels
@@ -329,8 +329,8 @@ Decoration levels 0,1,2 are available.  User variable highlighting is
 only in level 2 available (statical, if above flag is not set), the
 current default is 2
 
-#+BEGIN_SRC 
-(setq ansys-highlighting-level 1) ; default: 2
+#+BEGIN_SRC emacs-lisp
+(setq ansys-highlighting-level 1) ;default: 2
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp :tangle yes :exports none
@@ -425,7 +425,7 @@ between flexlm and ANSYS WorkBench, 2325 is the default port.
    (setq ansys-job "otto"); default: "file"
    #+END_SRC
 
-#+BEGIN_SRC :tangle yes :exports none
+#+BEGIN_SRC emacs-lisp :tangle yes :exports none
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 		       ;; ANSYS processes stuff
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
