--- a/NEWS.org
+++ b/NEWS.org
@@ -12,11 +12,11 @@
 #+LATEX_HEADER:
 
 #+STARTUP: showall
-* News and History
+#+title: News and History of ANSYS-Mode
 
 Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
-** Version 16.1.1 Mai 2015
+** Version 16.1.1 July 2015
 
    - The command `ansys-show-command-parameters' (M-?) does
      additonally count the number of parameters and visualise at which
