--- a/doc/A-M_in-depth_tutorial.org
+++ b/doc/A-M_in-depth_tutorial.org
@@ -1369,13 +1369,14 @@ Thank you for your time, have fun with Emacs...
 
 # /pnum,line,1 $ lplo
 
-# local variables:
-# mode : ansys
-# end:
+# # local variables:
+# # mode : ansys
+# # end:
 
 -----
 # LOCAL variables:
 # word-wrap: t
 # show-trailing-whitespace: t
 # indicate-empty-lines: t
+# mode: org
 # end:
