--- a/README.org
+++ b/README.org
@@ -404,18 +404,19 @@ explicitly called ansys-mode.
      (autoload 'ansys-license-status "ansys-mode" "Activate the function for displaying ANSYS license status or starting a license utility." 'interactive)
 #+END_SRC
 
-** Hints for compiling Emacs under Linux
+** Compiling Emacs under Linux
    #+BEGIN_SRC sh
    cd emacs-24.5/
    ./configure
    make
    #+END_SRC
-*** RHEL 6 and Debian derivatives
+*** RHEL (6)
 **** Required libraries
      - ncurses-devel.x86_64
      - gtk2-devel.x86_64 (libgtk under Debian)
      #+BEGIN_SRC sh
-     yum install ncurses-devel.x86_64
+     sudo yum install ncurses-devel.x86_64
+     ...
      #+END_SRC
 **** Optional libraries
      Graphics support
@@ -425,6 +426,71 @@ explicitly called ansys-mode.
      - libpng-devel.x86_64
      - libxpm-devel.x86_64
      - libMagickWand.x86_64 (for imagemagick support)
+
+*** Debian and derivatives
+**** Required libraries
+     Build dependencys with
+     #+BEGIN_SRC sh
+     sudo aptitude install build-dep emacs25
+     #+END_SRC
+    libtiff5-dev -> libtiff-dev
+    libpng12-dev
+**** Optional libraries
+     Graphics support
+     - libgif-dev
+     - libmagickwand-dev (for imagemagick support)
+***** gnutls
+      for smtp authentication  ~/.authinfo.gpg (info:auth)
+     #+BEGIN_SRC sh :dir /sudo:: :results raw
+      aptitude search gnutls
+     #+END_SRC
+
+     #+RESULTS:
+     [  0%] Reading package lists                            [100%] Reading package lists                            [  0%] Building dependency tree                               [100%] Building dependency tree                               [  0%] Reading state information                                [  7%] Reading state information                                [  0%] Reading extended state information                                         [  0%] Initializing package states                                  [  0%] Reading task descriptions                                [  0%] Building tag database                            [----] ?name("gnutls"): Accessing index                                       p   dsyslog-module-gnutls           - advanced modular syslog daemon - GnuTLS su
+     p   gnutls-bin                      - GNU TLS library - commandline utilities   
+     v   gnutls-dev                      -                                           
+     p   gnutls-doc                      - GNU TLS library - documentation and exampl
+     p   gnutls26-doc                    - GNU TLS library 2.x - documentation and ex
+     p   guile-gnutls                    - GNU TLS library - GNU Guile bindings      
+     p   libapache2-mod-gnutls           - Apache module for SSL and TLS encryption w
+     i A libcurl3-gnutls                 - easy-to-use client-side URL transfer libra
+     v   libcurl3-gnutls-dev             -                                           
+     p   libcurl4-gnutls-dev             - development files and documentation for li
+     p   libghc-gnutls-dev               - bindings for GNU TLS                      
+     v   libghc-gnutls-dev-0.1.4-5c3a9   -                                           
+     p   libghc-gnutls-doc               - bindings for GNU TLS; documentation       
+     p   libghc-gnutls-prof              - bindings for GNU TLS; profiling libraries 
+     v   libghc-gnutls-prof-0.1.4-5c3a9  -                                           
+     i   libgnutls-deb0-28               - GNU TLS library - main runtime library    
+     i   libgnutls-dev                   - GNU TLS library - development files       
+     v   libgnutls-openssl-dev           -                                           
+     i   libgnutls-openssl27             - GNU TLS library - OpenSSL wrapper         
+     p   libgnutls-xssl0                 - GNU TLS library - XSSL API runtime library
+     i A libgnutls26                     - GNU TLS library - runtime library         
+     p   libgnutls26-dbg                 - GNU TLS library - debugger symbols        
+     p   libgnutls28-dbg                 - GNU TLS library - debugger symbols        
+     p   libgnutls28-dev                 - GNU TLS library - development files       
+     i A libgnutlsxx27                   - GNU TLS library - C++ runtime library     
+     p   libgnutlsxx28                   - GNU TLS library - C++ runtime library     
+     i A libneon27-gnutls                - HTTP and WebDAV client library (GnuTLS ena
+     p   libneon27-gnutls-dbg            - Detached symbols for libneon27 (GnuTLS ena
+     p   libneon27-gnutls-dev            - Header and static library files for libneo
+     p   libxmlsec1-gnutls               - Gnutls engine for the XML security library
+     p   python-gnutls                   - Python wrapper for the GNUTLS library     
+     v   python2.7-gnutls                -                                           
+     p   rsyslog-gnutls                  - TLS protocol support for rsyslog          
+
+     #+BEGIN_SRC sh :dir /sudo:: :results raw
+      aptitude install -y libgnutls-dev gnutls-bin
+     #+END_SRC
+
+     #+RESULTS:
+
+**** Documentation of Emacs in Debian 8
+     The documenation is in the Debian non-free repository.  Because
+     of a general Resolution: Why the GNU Free Documentation License
+     is not suitable for Debian main
+     [[https://www.debian.org/vote/2006/vote_001]]hi
 
 * Usage and customisation
 
@@ -539,7 +605,7 @@ the following options:
 
 - At the [[http://www.emacswiki.org/emacs/AnsysMode][Emacs Wiki]] you might add comments or wishes for this mode
   without registration.
------
+-----y
 # The following is for Emacs
 # local variables:
 # word-wrap: t
