--- a/a-m.org
+++ b/a-m.org
@@ -372,14 +372,12 @@ setq ansys-program "/appl/ansys_inc/16.1.0/v161/ansys/bin/ansys161")
   ;; completely differing from default ANSYS installation paths, as in
   ;; the example below:
 
-         (setq ansys-help-program
-                     "/appl/ansys_inc/16.1.0/v161/commonfiles/help/HelpViewer/ANSYSHelpViewer.exe")
-        normally it looks like this:
-        "/INSTALL_DIRECTORY/ansys_inc/v161/commonfiles/help/HelpViewer/ANSYSHelpViewer.exe"
-
+        (setq ansys-help-program
+              "/appl/ansys_inc/16.1.0/v161/commonfiles/help/HelpViewer/ANSYSHelpViewer.exe")
+        ;;the ANSYS path to the help viewer looks normally like this:
+        ;; "/INSTALL_DIRECTORY/ansys_inc/v161/commonfiles/help/HelpViewer/ANSYSHelpViewer.exe"
         (setq ansys-help-path "/appl/ansys_inc/16.1.0/v161/commonfiles/help/en-us/help/")
         (setq ansys-program "/appl/ansys_inc/16.1.0/v161/ansys/bin/ansys161")
-
 #+END_SRC
 
 * Ansys processes
@@ -451,6 +449,8 @@ between flexlm and ANSYS WorkBench, 2325 is the default port.
 
 ;; ANSYS job name
 ;(setq ansys-job "otto"); default: "file"
+
+(message "ANSYS-Mode enabled.")
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 			      ;; The End
