--- a/helper/tools/ansys-mode/README
+++ b/helper/tools/ansys-mode/README
@@ -1,18 +1,12 @@
-Welcome to the ANSYS-Mode, please read the accompanying tutorial
+Welcome to ANSYS-Mode, please read the accompanying tutorial
 /appl/tools/ansys-mode/current/A-M_introductory_tutorial-16.1.1.pdf
 
-======================================================================
-			      Important
-
-Most functionality should work for any ANSYS version, but for some
-advanced stuff - like calling the help documentation in your browser -
-ANSYS-Mode assumes 16.1 is installed on your system!
-======================================================================
-
-/appl/tools/bin/ansys-mode.sh starts Emacs with the APDL mode
+/appl/tools/bin/ansys-mode.sh starts Emacs with the APDL editing mode
 enabled. For example
 
 $ ansys-mode.sh file.ans
+
+(Emacs uses the same key-bindings as the BASH shell! ;-)
 
 ANSYS-Mode is automatically switched on for the following types (file
 suffixes): .ans, .mac, .anf, .dat, .inp.
@@ -22,6 +16,14 @@ mode, please provide the command line argument `-nw', like in the
 following line:
 
 $ ansys-mode.sh file.ans -nw
+
+======================================================================
+			      Important
+
+Most functionality should work for any ANSYS version, but for some
+advanced stuff - like calling the help documentation in your browser -
+ANSYS-Mode 16.1.1 assumes that V161 is installed on your system!
+======================================================================
 
 If you want to enable ANSYS-Mode without calling the wrapper
 `ansys-mode.sh', then add the following lines in your ~/.emacs:
@@ -75,3 +77,8 @@ If you want to enable ANSYS-Mode without calling the wrapper
 (setq ansys-help-path "/appl/ansys_inc/16.1.0/v161/commonfiles/help/en-us/help/")
 (setq ansys-program "/appl/ansys_inc/16.1.0/v161/ansys/bin/ansys161")
 --- 8< ---------------------------------------------------------------
+
+The code is hosted on https://github.com/dieter-wilhelm/ansys-mode.
+Please report bugs or give feedback: dieter@duenenhof-wilhelm.de
+
+Thanks you
